--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "react": "17.0.2",
     "react-content-loader": "^5.0.4",
     "react-fade-in": "^1.1.0",
-    "react-hook-form": "6.3.1",
+    "react-hook-form": "^7.29.0",
     "react-native": "0.66.3",
     "react-native-app-intro-slider": "^4.0.2",
     "react-native-code-push": "^6.2.1",
