--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean-cache-android": "cd android && ./gradlew clean && ./gradlew cleanBuildCache && cd .."
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.8",
     "@paralleldrive/feature-toggles": "^1.0.4",
     "@paralleldrive/react-feature-toggles": "^2.3.1",
     "@react-native-community/async-storage": "^1.9.0",
@@ -68,7 +69,8 @@
     "react-native-webview": "^11.17.2",
     "rn-fetch-blob": "^0.12.0",
     "rn-placeholder": "^3.0.3",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
