--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,6 +5,15 @@ platform :ios, '11.0'
 
 pod 'React-RCTText', :path => '../node_modules/react-native/Libraries/Text', :modular_headers => true
 
+# If you're using autolinking, this line might not be needed
+pod 'WatermelonDB', :path => '../node_modules/@nozbe/watermelondb'
+
+# NOTE: Do not remove, needed to keep WatermelonDB compiling:
+pod 'React-jsi', :path => '../node_modules/react-native/ReactCommon/jsi', :modular_headers => true
+
+# NOTE: This is required as of v0.23
+pod 'simdjson', path: '../node_modules/@nozbe/simdjson'
+
 target 'isusapp' do
   config = use_native_modules!
 
