--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "@react-navigation/material-top-tabs": "^5.1.10",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
-    "appcenter": "^4.1.0",
-    "appcenter-analytics": "^4.1.0",
-    "appcenter-crashes": "^4.1.0",
+    "appcenter": "4.4.3",
+    "appcenter-analytics": "4.4.3",
+    "appcenter-crashes": "4.4.3",
     "axios": "^0.21.1",
     "intl": "^1.2.5",
     "jwt-decode": "^2.2.0",
@@ -78,7 +78,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/react-native": "^7.2.0",
-    "appcenter-cli": "^2.7.1",
+    "appcenter-cli": "2.10.8",
     "babel-jest": "^26.6.3",
     "babel-plugin-root-import": "^6.6.0",
     "cross-env": "^7.0.2",
