--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,8 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["src/*"]
-    }
+    },
+    "experimentalDecorators": true
   },
   "exclude": ["node_modules"]
 }
