--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-native-text-input-mask": "^3.1.4",
     "react-native-tracking-transparency": "^0.1.1",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-version-check": "^3.4.2",
     "react-native-webview": "^11.17.2",
     "rn-fetch-blob": "^0.12.0",
     "rn-placeholder": "^3.0.3",
