--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "react-hook-form": "^7.29.0",
     "react-native": "0.66.3",
     "react-native-app-intro-slider": "^4.0.2",
+    "react-native-check-version": "^1.0.11",
     "react-native-code-push": "^6.2.1",
     "react-native-config": "^1.4.5",
+    "react-native-device-info": "^8.7.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.0.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
