--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,15 @@
 {
   "compilerOptions": {
     "target": "es6",
+    "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "~/*": ["src/*"]
+      "~/*": [
+        "./src/*"
+      ]
     }
   },
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ],
 }
