--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/react-native": "^7.2.0",
+    "@types/styled-components-react-native": "^5.1.3",
     "appcenter-cli": "^2.10.8",
     "babel-jest": "^26.6.3",
     "babel-plugin-root-import": "^6.6.0",
