--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-config": "^1.4.5",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.0.3",
+    "react-native-in-app-review": "^4.1.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-onesignal": "^4.3.3",
     "react-native-paper": "^4.11.2",
