--- a/package.json
+++ b/package.json
@@ -17,13 +17,12 @@
   "dependencies": {
     "@hookform/resolvers": "^2.8.8",
     "@react-native-async-storage/async-storage": "^1.17.3",
-    "@react-native-community/masked-view": "^0.1.7",
     "@react-native-community/netinfo": "^8.0.0",
     "@react-native-firebase/analytics": "^10.1.0",
     "@react-native-firebase/app": "^10.1.0",
     "@react-native-firebase/crashlytics": "^10.1.0",
     "@react-native-picker/picker": "^1.9.12",
-    "@react-navigation/bottom-tabs": "^5.2.7",
+    "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/material-bottom-tabs": "^6.2.2",
     "@react-navigation/material-top-tabs": "^6.2.2",
@@ -43,13 +42,14 @@
     "react-native-app-intro-slider": "^4.0.2",
     "react-native-code-push": "^6.2.1",
     "react-native-config": "^1.4.5",
-    "react-native-gesture-handler": "^1.10.3",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-image-picker": "^4.0.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-onesignal": "^4.3.3",
+    "react-native-pager-view": "^5.4.25",
     "react-native-paper": "^4.11.2",
     "react-native-password-eye": "^1.0.2",
-    "react-native-reanimated": "^2.3.1",
+    "react-native-reanimated": "^2.9.1",
     "react-native-render-html": "^4.2.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.1",
@@ -59,7 +59,7 @@
     "react-native-text-input-mask": "^3.1.4",
     "react-native-tracking-transparency": "^0.1.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-webview": "^11.17.2",
+    "react-native-webview": "^11.22.5",
     "rn-fetch-blob": "^0.12.0",
     "rn-placeholder": "^3.0.3",
     "styled-components": "^5.3.3",
