--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,6 +6,10 @@ platform :ios, '11.0'
 pod 'React-RCTText', :path => '../node_modules/react-native/Libraries/Text', :modular_headers => true
 
 target 'isusapp' do
+  permissions_path = '../node_modules/react-native-permissions/ios'
+
+  pod 'Permission-AppTrackingTransparency', :path => "#{permissions_path}/AppTrackingTransparency"
+
   config = use_native_modules!
 
   use_react_native!(
