--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-pager-view": "^5.4.25",
     "react-native-paper": "^4.12.2",
     "react-native-password-eye": "^1.0.2",
+    "react-native-permissions": "^3.6.0",
     "react-native-reanimated": "^2.9.1",
     "react-native-render-html": "^4.2.0",
     "react-native-safe-area-context": "^4.3.1",
